# cpp_Raytracer

./: .gitignore  CMakeLists.txt  README.md
Google_tests/: CMakeLists.txt  Camera_tests.cpp  Color_tests.cpp  Math_tests.cpp  Multithreading_tests.cpp  Patterns_tests.cpp  Random_tests.cpp  Raytracing_tests.cpp  Reflections_tests.cpp  Refractions_tests.cpp  Scene_tests.cpp  Shapes_tests.cpp
Google_tests/lib/: CMakeLists.txt  CONTRIBUTORS
Google_tests/lib/docs/: advanced.md  faq.md  gmock_cook_book.md  gmock_faq.md  primer.md
Google_tests/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
Google_tests/lib/googletest/include/gtest/: gtest-death-test.h  gtest-param-test.h  gtest-printers.h  gtest-typed-test.h  gtest.h
Google_tests/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-type-util.h
Google_tests/lib/googletest/src/: gtest-internal-inl.h  gtest-port.cc  gtest.cc
cpp-Raytracer/: CCamera.cpp  CCamera.h  CCanvas.cpp  CCanvas.h  CColor.cpp  CColor.h  CCube.cpp  CCube.h  CMaterial.cpp  CMaterial.h  CPattern.cpp  CPattern.h  CPlane.cpp  CPlane.h  CRay.cpp  CRay.h  CShape.cpp  CShape.h  CSphere.cpp  CSphere.h  CWorld.cpp  CWorld.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Comps.h  Cube.h  Environment.cpp  Environment.h  Intersection.cpp  Intersection.h  IntersectionComputations.cpp  IntersectionComputations.h  Light.cpp  Light.h  Material.cpp  Material.h  (+23 more)
cpp-Raytracer/Shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
